--- a/index.html
+++ b/index.html
@@ -1,21 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Favorite Artist</title>
-
-    <style
+ </head>
+<body>
+    
     <link rel="stylesheet" type="text/css" href="styles.css"/>
 
 <header>
      <nav>
         <a href="https://www.youtube.com/channel/UCwppdrjsBPAZg5_cUwQjfMQ">YouTube Channel</a>
-    </nav>
-   
-             <nav>
         <a href="https://music.apple.com/us/artist/charlie-puth/336249253">Apple Music</a>
  </nav>
 </header>
@@ -26,7 +23,7 @@
             <h2>
                 Who is Charlie Puth?  </h2>
                 <p>He is an American singer, songwriter, and record producer. His initial exposure came through the viral success of his song videos uploaded to YouTube.
- </p>
+                </p>
  <p>After initially signing with eleveneleven after performing on The Ellen DeGeneres Show, Puth began contributing to songs and albums for other artists, as well as creating lite solo material and covers of popular songs. With primary intent on a solo career, Atlantic Records and Artist Partner Group eventually sought the artist and released his debut single, "Marvin Gaye" (featuring Meghan Trainor), in 2015.His next single and first feature, "See You Again", which he co-wrote, co-produced, and performed with Atlantic label-mate Wiz Khalifa for the Furious 7 soundtrack as a tribute to actor Paul Walker. It peaked at number one on the US Billboard Hot 100 for 12 non-consecutive weeks. After the success of "See You Again", he gained worldwide recognition for multiple subsequent releases, including his next single, "One Call Away". The single reached number 12 on the Billboard Hot 100.</p>
 
         </article>
@@ -34,30 +31,44 @@
     <section>
         <article> 
              <h2> Top Singles</h2>
-            <li>Marvin Gaye </li>
-            <li>See You Again </li>
-            <li>One Call Away</li>
-            <li>Girldfriend</li>
+        <ul class="singles">
+            <li>
+              "Marvin Gaye" 
+            </li>
+            <li>
+               "See You Again" 
+            </li>
+            <li>
+                "One Call Away"
+            </li>
+            <li>
+                "Girldfriend"
+            </li>
+        </ul>
         </article>
     </section>
     <section>
         <article>
             <p>The succes of these singles opened the door to have his own discography</p>
             <h2>Discography</h2>
-            <li>Nine Track Mind (2016)
-            </li>
-            <li>Voice Notes (2018)</li>
-            <li>Charlie (2022)</li>
+            <ul>
+             <li>
+                 "Nine Track Mind (2016)"
+             </li>
+             <li>
+                "Voice Notes (2018)"
+             </li>
+             <li>
+                "Charlie (2022)"
+             </li>
+            </ul>
 
         </article>
     </section>
-</main>
 <img src="Charlie.P.jpeg" alt="Charlie Puth image">
+</main>
 <footer> 
     &copy; Herminio 2022
 </footer>
-</head>
-<body>
-    
 </body>
 </html>
